// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcMultipleValuesSelection should not be visibile if isSearchable is set to false 1`] = `
<div
  class="ec-multiple-values-selection"
  data-test="ec-multiple-values-selection"
>
  <!---->
   
  <div>
    <!---->
      
    <li
      class="ec-multiple-values-selection__value-wrapper"
      data-test="ec-multiple-values-selection__value-wrapper"
    >
      <div
        class="ec-checkbox ec-multiple-values-selection__checkbox"
        data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
      >
        <input
          class="ec-checkbox__input"
          data-test="ec-checkbox__input"
          id="ec-checkbox-22"
          type="checkbox"
        />
         
        <div
          class="ec-checkbox__label-checkbox-wrapper"
        >
          <span
            class="ec-checkbox__check-icon-wrapper"
          >
            <!---->
          </span>
           
          <label
            class="ec-checkbox__label"
            data-test="ec-checkbox__label"
            for="ec-checkbox-22"
          >
            <div
              class="ec-multiple-values-selection__label-wrapper"
            >
              <svg
                class="ec-multiple-values-selection__icon ec-icon ec-icon--success"
                height="24"
                width="24"
              >
                <use
                  xlink:href="#ec-rounded-check"
                />
              </svg>
               
              <span
                class="ec-multiple-values-selection__label-text"
              >
                Success
              </span>
            </div>
          </label>
        </div>
         
        <!---->
      </div>
    </li>
    <li
      class="ec-multiple-values-selection__value-wrapper"
      data-test="ec-multiple-values-selection__value-wrapper"
    >
      <div
        class="ec-checkbox ec-multiple-values-selection__checkbox"
        data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
      >
        <input
          class="ec-checkbox__input"
          data-test="ec-checkbox__input"
          id="ec-checkbox-24"
          type="checkbox"
        />
         
        <div
          class="ec-checkbox__label-checkbox-wrapper"
        >
          <span
            class="ec-checkbox__check-icon-wrapper"
          >
            <!---->
          </span>
           
          <label
            class="ec-checkbox__label"
            data-test="ec-checkbox__label"
            for="ec-checkbox-24"
          >
            <div
              class="ec-multiple-values-selection__label-wrapper"
            >
              <svg
                class="ec-multiple-values-selection__icon ec-icon ec-icon--success"
                height="24"
                width="24"
              >
                <use
                  xlink:href="#ec-rounded-partial"
                />
              </svg>
               
              <span
                class="ec-multiple-values-selection__label-text"
              >
                Name two
              </span>
            </div>
          </label>
        </div>
         
        <!---->
      </div>
    </li>
    <li
      class="ec-multiple-values-selection__value-wrapper"
      data-test="ec-multiple-values-selection__value-wrapper"
    >
      <div
        class="ec-checkbox ec-multiple-values-selection__checkbox"
        data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
      >
        <input
          class="ec-checkbox__input"
          data-test="ec-checkbox__input"
          id="ec-checkbox-26"
          type="checkbox"
        />
         
        <div
          class="ec-checkbox__label-checkbox-wrapper"
        >
          <span
            class="ec-checkbox__check-icon-wrapper"
          >
            <!---->
          </span>
           
          <label
            class="ec-checkbox__label"
            data-test="ec-checkbox__label"
            for="ec-checkbox-26"
          >
            <div
              class="ec-multiple-values-selection__label-wrapper"
            >
              <svg
                class="ec-multiple-values-selection__icon ec-icon ec-icon--error"
                height="24"
                width="24"
              >
                <use
                  xlink:href="#ec-rounded-cancelled"
                />
              </svg>
               
              <span
                class="ec-multiple-values-selection__label-text"
              >
                Cancelled
              </span>
            </div>
          </label>
        </div>
         
        <!---->
      </div>
    </li>
  </div>
</div>
`;

exports[`EcMultipleValuesSelection should render correctly if all the required props are passed 1`] = `
<div
  class="ec-multiple-values-selection"
  data-test="ec-multiple-values-selection"
>
  <!---->
   
  <div>
    <!---->
      
    <li
      class="ec-multiple-values-selection__value-wrapper"
      data-test="ec-multiple-values-selection__value-wrapper"
    >
      <div
        class="ec-checkbox ec-multiple-values-selection__checkbox"
        data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
      >
        <input
          class="ec-checkbox__input"
          data-test="ec-checkbox__input"
          id="ec-checkbox-2"
          type="checkbox"
        />
         
        <div
          class="ec-checkbox__label-checkbox-wrapper"
        >
          <span
            class="ec-checkbox__check-icon-wrapper"
          >
            <!---->
          </span>
           
          <label
            class="ec-checkbox__label"
            data-test="ec-checkbox__label"
            for="ec-checkbox-2"
          >
            <div
              class="ec-multiple-values-selection__label-wrapper"
            >
              <svg
                class="ec-multiple-values-selection__icon ec-icon ec-icon--success"
                height="24"
                width="24"
              >
                <use
                  xlink:href="#ec-rounded-check"
                />
              </svg>
               
              <span
                class="ec-multiple-values-selection__label-text"
              >
                Success
              </span>
            </div>
          </label>
        </div>
         
        <!---->
      </div>
    </li>
    <li
      class="ec-multiple-values-selection__value-wrapper"
      data-test="ec-multiple-values-selection__value-wrapper"
    >
      <div
        class="ec-checkbox ec-multiple-values-selection__checkbox"
        data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
      >
        <input
          class="ec-checkbox__input"
          data-test="ec-checkbox__input"
          id="ec-checkbox-4"
          type="checkbox"
        />
         
        <div
          class="ec-checkbox__label-checkbox-wrapper"
        >
          <span
            class="ec-checkbox__check-icon-wrapper"
          >
            <!---->
          </span>
           
          <label
            class="ec-checkbox__label"
            data-test="ec-checkbox__label"
            for="ec-checkbox-4"
          >
            <div
              class="ec-multiple-values-selection__label-wrapper"
            >
              <svg
                class="ec-multiple-values-selection__icon ec-icon ec-icon--success"
                height="24"
                width="24"
              >
                <use
                  xlink:href="#ec-rounded-partial"
                />
              </svg>
               
              <span
                class="ec-multiple-values-selection__label-text"
              >
                Name two
              </span>
            </div>
          </label>
        </div>
         
        <!---->
      </div>
    </li>
    <li
      class="ec-multiple-values-selection__value-wrapper"
      data-test="ec-multiple-values-selection__value-wrapper"
    >
      <div
        class="ec-checkbox ec-multiple-values-selection__checkbox"
        data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
      >
        <input
          class="ec-checkbox__input"
          data-test="ec-checkbox__input"
          id="ec-checkbox-6"
          type="checkbox"
        />
         
        <div
          class="ec-checkbox__label-checkbox-wrapper"
        >
          <span
            class="ec-checkbox__check-icon-wrapper"
          >
            <!---->
          </span>
           
          <label
            class="ec-checkbox__label"
            data-test="ec-checkbox__label"
            for="ec-checkbox-6"
          >
            <div
              class="ec-multiple-values-selection__label-wrapper"
            >
              <svg
                class="ec-multiple-values-selection__icon ec-icon ec-icon--error"
                height="24"
                width="24"
              >
                <use
                  xlink:href="#ec-rounded-cancelled"
                />
              </svg>
               
              <span
                class="ec-multiple-values-selection__label-text"
              >
                Cancelled
              </span>
            </div>
          </label>
        </div>
         
        <!---->
      </div>
    </li>
  </div>
</div>
`;

exports[`EcMultipleValuesSelection should set the empty state message 1`] = `
<div
  class="ec-multiple-values-selection"
  data-test="ec-multiple-values-selection"
>
  <!---->
   
  <div
    class="ec-multiple-values-selection__no-results-wrapper"
  >
    <div
      class="ec-loading ec-multiple-values-selection__loading"
      data-test="ec-loading"
    >
      <!---->
       
      <div
        class="ec-loading__content ec-loading__content--is-transparent"
        data-test="ec-loading__content"
      />
    </div>
     
    <svg
      class="ec-multiple-values-selection__no-results-icon ec-icon ec-icon--info"
      data-test="ec-multiple-values-selection__no-results-icon"
      height="32"
      width="32"
    >
      <use
        xlink:href="#ec-simple-error"
      />
    </svg>
     
    <span
      class="ec-multiple-values-selection__no-results-message"
    >
      No items
    </span>
  </div>
</div>
`;

exports[`EcMultipleValuesSelection should set the error message 1`] = `
<div
  class="ec-multiple-values-selection"
  data-test="ec-multiple-values-selection"
>
  <!---->
   
  <div
    class="ec-multiple-values-selection__no-results-wrapper"
  >
    <div
      class="ec-loading ec-multiple-values-selection__loading"
      data-test="ec-loading"
    >
      <!---->
       
      <div
        class="ec-loading__content ec-loading__content--is-transparent"
        data-test="ec-loading__content"
      />
    </div>
     
    <svg
      class="ec-multiple-values-selection__no-results-icon ec-icon ec-icon--info"
      data-test="ec-multiple-values-selection__no-results-icon"
      height="32"
      width="32"
    >
      <use
        xlink:href="#ec-simple-error"
      />
    </svg>
     
    <span
      class="ec-multiple-values-selection__no-results-message"
    >
      Error message
    </span>
  </div>
</div>
`;

exports[`EcMultipleValuesSelection should toggle (select/unselect) all options clicked 1`] = `
<div
  class="ec-multiple-values-selection"
  data-test="ec-multiple-values-selection"
>
  <!---->
   
  <div>
    <div
      class="ec-multiple-values-selection__select-all"
    >
      <div
        class="ec-checkbox ec-multiple-values-selection__select-all--checkbox"
        data-test="ec-multiple-values-selection__select-all ec-checkbox"
      >
        <input
          class="ec-checkbox__input"
          data-test="ec-checkbox__input"
          id="ec-checkbox-50"
          type="checkbox"
        />
         
        <div
          class="ec-checkbox__label-checkbox-wrapper"
        >
          <span
            class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked"
          >
            <svg
              class="ec-checkbox__check-icon ec-icon"
              height="16"
              width="16"
            >
              <use
                xlink:href="#ec-simple-check"
              />
            </svg>
          </span>
           
          <label
            class="ec-checkbox__label"
            data-test="ec-checkbox__label"
            for="ec-checkbox-50"
          >
            Select all
          </label>
        </div>
         
        <!---->
      </div>
    </div>
     
    <li
      class="ec-multiple-values-selection__value-wrapper"
      data-test="ec-multiple-values-selection__checkbox-deselect"
    >
      <div
        class="ec-checkbox ec-multiple-values-selection__checkbox"
        data-test="ec-checkbox"
      >
        <input
          class="ec-checkbox__input"
          data-test="ec-checkbox__input"
          id="ec-checkbox-51"
          type="checkbox"
        />
         
        <div
          class="ec-checkbox__label-checkbox-wrapper"
        >
          <span
            class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked"
          >
            <svg
              class="ec-checkbox__check-icon ec-icon"
              height="16"
              width="16"
            >
              <use
                xlink:href="#ec-simple-check"
              />
            </svg>
          </span>
           
          <label
            class="ec-checkbox__label"
            data-test="ec-checkbox__label"
            for="ec-checkbox-51"
          >
            <div
              class="ec-multiple-values-selection__label-wrapper"
            >
              <svg
                class="ec-multiple-values-selection__icon ec-icon ec-icon--success"
                height="24"
                width="24"
              >
                <use
                  xlink:href="#ec-rounded-check"
                />
              </svg>
               
              <span
                class="ec-multiple-values-selection__label-text"
              >
                Success
              </span>
            </div>
          </label>
        </div>
         
        <!---->
      </div>
    </li>
    <li
      class="ec-multiple-values-selection__value-wrapper"
      data-test="ec-multiple-values-selection__checkbox-deselect"
    >
      <div
        class="ec-checkbox ec-multiple-values-selection__checkbox"
        data-test="ec-checkbox"
      >
        <input
          class="ec-checkbox__input"
          data-test="ec-checkbox__input"
          id="ec-checkbox-53"
          type="checkbox"
        />
         
        <div
          class="ec-checkbox__label-checkbox-wrapper"
        >
          <span
            class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked"
          >
            <svg
              class="ec-checkbox__check-icon ec-icon"
              height="16"
              width="16"
            >
              <use
                xlink:href="#ec-simple-check"
              />
            </svg>
          </span>
           
          <label
            class="ec-checkbox__label"
            data-test="ec-checkbox__label"
            for="ec-checkbox-53"
          >
            <div
              class="ec-multiple-values-selection__label-wrapper"
            >
              <svg
                class="ec-multiple-values-selection__icon ec-icon ec-icon--success"
                height="24"
                width="24"
              >
                <use
                  xlink:href="#ec-rounded-partial"
                />
              </svg>
               
              <span
                class="ec-multiple-values-selection__label-text"
              >
                Name two
              </span>
            </div>
          </label>
        </div>
         
        <!---->
      </div>
    </li>
    <li
      class="ec-multiple-values-selection__value-wrapper"
      data-test="ec-multiple-values-selection__checkbox-deselect"
    >
      <div
        class="ec-checkbox ec-multiple-values-selection__checkbox"
        data-test="ec-checkbox"
      >
        <input
          class="ec-checkbox__input"
          data-test="ec-checkbox__input"
          id="ec-checkbox-55"
          type="checkbox"
        />
         
        <div
          class="ec-checkbox__label-checkbox-wrapper"
        >
          <span
            class="ec-checkbox__check-icon-wrapper ec-checkbox__check-icon-wrapper--checked"
          >
            <svg
              class="ec-checkbox__check-icon ec-icon"
              height="16"
              width="16"
            >
              <use
                xlink:href="#ec-simple-check"
              />
            </svg>
          </span>
           
          <label
            class="ec-checkbox__label"
            data-test="ec-checkbox__label"
            for="ec-checkbox-55"
          >
            <div
              class="ec-multiple-values-selection__label-wrapper"
            >
              <svg
                class="ec-multiple-values-selection__icon ec-icon ec-icon--error"
                height="24"
                width="24"
              >
                <use
                  xlink:href="#ec-rounded-cancelled"
                />
              </svg>
               
              <span
                class="ec-multiple-values-selection__label-text"
              >
                Cancelled
              </span>
            </div>
          </label>
        </div>
         
        <!---->
      </div>
    </li>
     
  </div>
</div>
`;

exports[`EcMultipleValuesSelection should toggle (select/unselect) all options clicked 2`] = `
<div
  class="ec-multiple-values-selection"
  data-test="ec-multiple-values-selection"
>
  <!---->
   
  <div>
    <div
      class="ec-multiple-values-selection__select-all"
    >
      <div
        class="ec-checkbox ec-multiple-values-selection__select-all--checkbox"
        data-test="ec-multiple-values-selection__select-all ec-checkbox"
      >
        <input
          class="ec-checkbox__input"
          data-test="ec-checkbox__input"
          id="ec-checkbox-50"
          type="checkbox"
        />
         
        <div
          class="ec-checkbox__label-checkbox-wrapper"
        >
          <span
            class="ec-checkbox__check-icon-wrapper"
          >
            <!---->
          </span>
           
          <label
            class="ec-checkbox__label"
            data-test="ec-checkbox__label"
            for="ec-checkbox-50"
          >
            Select all
          </label>
        </div>
         
        <!---->
      </div>
    </div>
      
    <li
      class="ec-multiple-values-selection__value-wrapper"
      data-test="ec-multiple-values-selection__value-wrapper"
    >
      <div
        class="ec-checkbox ec-multiple-values-selection__checkbox"
        data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
      >
        <input
          class="ec-checkbox__input"
          data-test="ec-checkbox__input"
          id="ec-checkbox-51"
          type="checkbox"
        />
         
        <div
          class="ec-checkbox__label-checkbox-wrapper"
        >
          <span
            class="ec-checkbox__check-icon-wrapper"
          >
            <!---->
          </span>
           
          <label
            class="ec-checkbox__label"
            data-test="ec-checkbox__label"
            for="ec-checkbox-51"
          >
            <div
              class="ec-multiple-values-selection__label-wrapper"
            >
              <svg
                class="ec-multiple-values-selection__icon ec-icon ec-icon--success"
                height="24"
                width="24"
              >
                <use
                  xlink:href="#ec-rounded-check"
                />
              </svg>
               
              <span
                class="ec-multiple-values-selection__label-text"
              >
                Success
              </span>
            </div>
          </label>
        </div>
         
        <!---->
      </div>
    </li>
    <li
      class="ec-multiple-values-selection__value-wrapper"
      data-test="ec-multiple-values-selection__value-wrapper"
    >
      <div
        class="ec-checkbox ec-multiple-values-selection__checkbox"
        data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
      >
        <input
          class="ec-checkbox__input"
          data-test="ec-checkbox__input"
          id="ec-checkbox-53"
          type="checkbox"
        />
         
        <div
          class="ec-checkbox__label-checkbox-wrapper"
        >
          <span
            class="ec-checkbox__check-icon-wrapper"
          >
            <!---->
          </span>
           
          <label
            class="ec-checkbox__label"
            data-test="ec-checkbox__label"
            for="ec-checkbox-53"
          >
            <div
              class="ec-multiple-values-selection__label-wrapper"
            >
              <svg
                class="ec-multiple-values-selection__icon ec-icon ec-icon--success"
                height="24"
                width="24"
              >
                <use
                  xlink:href="#ec-rounded-partial"
                />
              </svg>
               
              <span
                class="ec-multiple-values-selection__label-text"
              >
                Name two
              </span>
            </div>
          </label>
        </div>
         
        <!---->
      </div>
    </li>
    <li
      class="ec-multiple-values-selection__value-wrapper"
      data-test="ec-multiple-values-selection__value-wrapper"
    >
      <div
        class="ec-checkbox ec-multiple-values-selection__checkbox"
        data-test="ec-multiple-values-selection__checkbox-select ec-checkbox"
      >
        <input
          class="ec-checkbox__input"
          data-test="ec-checkbox__input"
          id="ec-checkbox-55"
          type="checkbox"
        />
         
        <div
          class="ec-checkbox__label-checkbox-wrapper"
        >
          <span
            class="ec-checkbox__check-icon-wrapper"
          >
            <!---->
          </span>
           
          <label
            class="ec-checkbox__label"
            data-test="ec-checkbox__label"
            for="ec-checkbox-55"
          >
            <div
              class="ec-multiple-values-selection__label-wrapper"
            >
              <svg
                class="ec-multiple-values-selection__icon ec-icon ec-icon--error"
                height="24"
                width="24"
              >
                <use
                  xlink:href="#ec-rounded-cancelled"
                />
              </svg>
               
              <span
                class="ec-multiple-values-selection__label-text"
              >
                Cancelled
              </span>
            </div>
          </label>
        </div>
         
        <!---->
      </div>
    </li>
  </div>
</div>
`;
